--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="header">
-  <h2><img url:images/foulard.png>49e Groupe Scout de Saint-Georges </h2>
+  <h2><img src="images/foulard.png">49e Groupe Scout de Saint-Georges </h2>
   <p>Scroll down to see the sticky effect.</p>
 </div>
 
