--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="header">
-  <img src="images/foulard.png" width="50" height="60">
+  <img class="logo" src="images/foulard.png" width="50" height="60">
   <h2>49e Groupe Scout de Saint-Georges </h2>
   <p>Scroll down to see the sticky effect.</p>
 </div>
