--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 <body>
 
 <div class="header">
-  <img class="logo" src="images/foulard.png" width="50" height="60">
+  <!--<img class="logo" src="images/foulard.png" width="50" height="60">-->
+  <img src="foulard.png" style="animation: move 5s ease-in-out infinite;">
+@keyframes move {
+  from {left: 0;}
+  to {left: 110px;}
+}
   <h2>49e Groupe Scout de Saint-Georges </h2>
   <p>Scroll down to see the sticky effect.</p>
 </div>
