--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
 <body>
 
 <div class="header">
-  <!--<img class="logo" src="images/foulard.png" width="50" height="60">-->
-  <img src="images/foulard.png" style="animation: move 5s ease-in-out infinite;">
+  <img class="logo" src="images/foulard.png" width="50" height="60">
   <h2>49e Groupe Scout de Saint-Georges </h2>
   <p>Scroll down to see the sticky effect.</p>
 </div>
 
 <div id="navbar">
   <a class="active" href="javascript:void(0)">Home</a>
-  <a href="javascript:void(0)">News</a>
-  <a href="javascript:void(0)">Contact</a>
+  <a href="#">News</a>
+  <a href="#">Contact</a>
 </div>
 
 <div class="content">
