--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 
-<div class="header">
   <img class="logo" src="images/foulard.png" width="50" height="60">
+<div class="header">
   <h2>49e Groupe Scout de Saint-Georges </h2>
   <p>Scroll down to see the sticky effect.</p>
 </div>
 
 <div id="navbar">
-  <a class="active" href="javascript:void(0)">Home</a>
+  <a class="active" href="#">Home</a>
   <a href="#">News</a>
   <a href="#">Contact</a>
 </div>
