--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
 
-  <img class="logo" src="images/foulard.png" width="50" height="60">
+  
 <div class="header">
-  <h2>49e Groupe Scout de Saint-Georges </h2>
+<img class="logo" src="images/foulard.png" width="50" height="60">
+  <h2 class="title">49e Groupe Scout de Saint-Georges </h2>
   <p>Scroll down to see the sticky effect.</p>
 </div>
 
