--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   
 <div class="header">
-<img class="logo" src="images/foulard.png" width="150" height="180">
-  <h2 class="title">49e Groupe Scout de Saint-Georges </h2>
+<div><img class="logo" src="images/foulard.png" width="150" height="180"></div>
+<div><h2 class="title">49e Groupe Scout de Saint-Georges </h2></div> 
 </div>
 
 <div id="navbar">
