--- a/index.html
+++ b/index.html
@@ -14,9 +14,39 @@
 </div>
 
 <div id="navbar">
-  <a class="active" href="#">Home</a>
-  <a href="#">News</a>
-  <a href="#">Contact</a>
+  <div class="btn-group">
+    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+      Explication des scouts
+    </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">D’où ça vient</a></li>
+        <li><a class="dropdown-item" href="#">Le fondateur</a></li>
+       <li><a class="dropdown-item" href="#">Liens vers l’ASC</a></li>
+      </ul>
+    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+      Le 49e groupe scout
+    </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Les différents groupes d’âge/explications</a></li>
+        <li><a class="dropdown-item" href="#">Dates de création</a></li>
+        <li><a class="dropdown-item" href="#">Petit historique</a></li>
+        <li><a class="dropdown-item" href="#">Terre cumberland</a></li>
+     </ul>
+     <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+      Dates importantes
+     </button>
+     <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+      Moyen de financement avec moment dans l’année     
+     </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Calendrier</a></li>
+        <li><a class="dropdown-item" href="#">Chocolat</a></li>
+        <li><a class="dropdown-item" href="#">Lavothon</a></li>
+        <li><a class="dropdown-item" href="#">Canette</a></li>
+        <li><a class="dropdown-item" href="#">Linge</a></li>
+        <li><a class="dropdown-item" href="#">Don via virement</a></li>
+     </ul>
+  </div>
 </div>
 
 <div class="content">
