--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a class="dropdown-item" href="#">Le fondateur</a></li>
        <li><a class="dropdown-item" href="#">Liens vers l’ASC</a></li>
       </ul>
+  </div>    
     <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
       Le 49e groupe scout
     </button>
