--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div><h2 class="title">49e Groupe Scout de Saint-Georges </h2></div> 
 </div>
 
-<!--<div id="navbar">
+<div id="navbar">
   <div class="btn-group">
     <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
       Explication des scouts
@@ -23,7 +23,8 @@
         <li><a class="dropdown-item" href="#">Le fondateur</a></li>
        <li><a class="dropdown-item" href="#">Liens vers l’ASC</a></li>
       </ul>
-  </div>    
+  </div> 
+  <div class="btn-group">   
     <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
       Le 49e groupe scout
     </button>
@@ -33,9 +34,13 @@
         <li><a class="dropdown-item" href="#">Petit historique</a></li>
         <li><a class="dropdown-item" href="#">Terre cumberland</a></li>
      </ul>
+  </div>
+  <div class="btn-group">     
      <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
       Dates importantes
      </button>
+  </div>  
+  <div class="btn-group">
      <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
       Moyen de financement avec moment dans l’année     
      </button>
@@ -49,29 +54,6 @@
      </ul>
   </div>
 </div>
--->
-<nav class="navbar">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </button>
-          <ul class="dropdown-menu dropdown-menu-dark">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
 
 <div class="content">
   <h3>Sticky Navigation Example</h3>
