--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div id="navbar">
   <div class="btn-group">
-    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="true">
       Explication des scouts
     </button>
       <ul class="dropdown-menu">
@@ -25,7 +25,7 @@
       </ul>
   </div> 
   <div class="btn-group">   
-    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="true">
       Le 49e groupe scout
     </button>
       <ul class="dropdown-menu">
@@ -36,12 +36,12 @@
      </ul>
   </div>
   <div class="btn-group">     
-     <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+     <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="true">
       Dates importantes
      </button>
   </div>  
   <div class="btn-group">
-     <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+     <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="true">
       Moyen de financement avec moment dans l’année     
      </button>
       <ul class="dropdown-menu">
