--- a/index.html
+++ b/index.html
@@ -14,60 +14,35 @@
 </div>
 
 <div id="navbar">
-  <div class="btn-group">
-    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="true">
-      Explication des scouts
-    </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">D’où ça vient</a></li>
-        <li><a class="dropdown-item" href="#">Le fondateur</a></li>
-       <li><a class="dropdown-item" href="#">Liens vers l’ASC</a></li>
-      </ul>
-  </div> 
-  <div class="btn-group">   
-    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="true">
-      Le 49e groupe scout
-    </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Les différents groupes d’âge/explications</a></li>
-        <li><a class="dropdown-item" href="#">Dates de création</a></li>
-        <li><a class="dropdown-item" href="#">Petit historique</a></li>
-        <li><a class="dropdown-item" href="#">Terre cumberland</a></li>
-     </ul>
-  </div>
-  <div class="btn-group">     
-     <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="true">
-      Dates importantes
-     </button>
-  </div>  
-  <div class="btn-group">
-     <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="true">
-      Moyen de financement avec moment dans l’année     
-     </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Calendrier</a></li>
-        <li><a class="dropdown-item" href="#">Chocolat</a></li>
-        <li><a class="dropdown-item" href="#">Lavothon</a></li>
-        <li><a class="dropdown-item" href="#">Canette</a></li>
-        <li><a class="dropdown-item" href="#">Linge</a></li>
-        <li><a class="dropdown-item" href="#">Don via virement</a></li>
-     </ul>
-  </div>
+    <div class="dropdown">
+        <button>1</button>
+        <div class="dropdown-options">
+          <a href="#">allo</a>
+          <a href="#">bonjour</a>
+          <a href="#">bye</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <button>2</button>
+        <div class="dropdown-options">
+          <a href="#">test 1</a>
+          <a href="#">test 2</a>
+          <a href="#">test 3</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <button>3</button>
+        <div class="dropdown-options">
+          <a href="#">Dashboard</a>
+          <a href="#">Setting</a>
+          <a href="#">Logout</a>
+        </div>
+      </div>
 </div>
 
 <div class="content">
   <h3>Sticky Navigation Example</h3>
   <p>The navbar will stick to the top when you reach its scroll position.</p>
-  <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-      Dropdown button
-    </button>
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="#">Action</a></li>
-      <li><a class="dropdown-item" href="#">Another action</a></li>
-      <li><a class="dropdown-item" href="#">Something else here</a></li>
-    </ul>
-  </div>
   <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.<br>
     Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.<br>
     Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.<br>
