--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html>
 
-        <title>49e St-Georges</title>
-
     <head>
-
+        <title>49e St-Georges</title>
+        <link rel="icon" href="https://www.w3schools.com/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
-
     </head>
-    <body>
 
-  
+    <body>
             <div class="header">
                 <div><img class="logo" src="images/foulard.png" width="125" height="150"></div>
                 <div><h2 class="title">49e Groupe Scout de Saint-Georges </h2></div> 
             </div>
-            
 
         <div id="navbar">
             <div class="dropdown">
@@ -55,6 +51,5 @@
                 Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.<br><br>
                 Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
         </div>
-
     </body>
 </html>
