--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>49e St-Georges</title>
-        <link rel="icon" href="file:///C:/Users/danie/Documents/GitHub/scout-website/images/foulard.ico">
+        <link rel="icon" src="images/foulard.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
     </head>
