--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>49e St-Georges</title>
-        <link rel="icon" src="images/foulard.ico">
+        <link rel="icon" type="image/x-icon" href="/images/foulard.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
     </head>
