bg header cropped

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>49e St-Georges</title>
+        <title>49e Groupe Scout St-Georges</title>
         <link rel="shortcut icon" href="images/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
@@ -11,7 +11,6 @@
     <body>
             <div class="header">
                 <div><img class="logo" src="images/foulard.png" width="125" height="150"></div>
-                <div><h2 class="title">49e Groupe Scout de Saint-Georges </h2></div> 
             </div>
 
         <div id="navbar">
