--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
             <div class="header">
                 <div><img class="logo" src="images/foulard.png" width="125" height="150"></div>
             </div>
+            <div class="header-bottom-text">
+                <p>Bienvenue au site web officiel des scouts de Saint-Georges!</p>
+            </div>
 
         <div id="navbar">
             
         </div>
 
         <div class="content">
+            <br><br>
             <h3>Sticky Navigation Example</h3>
             <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.<br><br>
                 Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.<br><br>
