--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="#">-Haut de page</a>
-                <a href="#explication">-Explication des scouts</a>
-                <a href="#49">-Le 49e groupe scout</a>
-                <a href="#dates">-Dates importantes</a>
-                <a href="#financement">-Moyens de financements</a>
-                <a href="#photos">-Photos</a>
+                <a href="#">-Haut de page</a><br>
+                <a href="#explication">-Explication des scouts</a><br>
+                <a href="#49">-Le 49e groupe scout</a><br>
+                <a href="#dates">-Dates importantes</a><br>
+                <a href="#financement">-Moyens de financements</a><br>
+                <a href="#photos">-Photos</a><br>
                 <a href="#implication">-Comment s'impliquer?</a>
               </div>
               
               <div id="main">
-                <span onclick="openNav()">&#9776; Navigation</span>
+                <div><span onclick="openNav()">&#9776; Navigation</span></div>
               </div>
 
 
