--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="#">-Haut de page</a><br>
-                <a href="#explication">-Explication des scouts</a><br>
-                <a href="#49">-Le 49e groupe scout</a><br>
-                <a href="#dates">-Dates importantes</a><br>
-                <a href="#financement">-Moyens de financements</a><br>
-                <a href="#photos">-Photos</a><br>
-                <a href="#implication">-Comment s'impliquer?</a>
-              </div>
+                <a href="#" onclick="closeNav()">-Haut de page</a><br>
+                <a href="#explication" onclick="closeNav()">-Explication des scouts</a><br>
+                <a href="#49" onclick="closeNav()">-Le 49e groupe scout</a><br>
+                <a href="#dates" onclick="closeNav()">-Dates importantes</a><br>
+                <a href="#financement" onclick="closeNav()">-Moyens de financements</a><br>
+                <a href="#photos" onclick="closeNav()">-Photos</a><br>
+                <a href="#implication" onclick="closeNav()">-Comment s'impliquer?</a>
+            </div>
+              <div id="overlay" onclick="closeNav()"></div>
               
               <div id="main">
                 <div><span onclick="openNav()">&#9776; Navigation</span></div>
@@ -34,15 +35,58 @@
 
 
         <div class="content">
-            <br><br>
-            <h3 id="example">Sticky Navigation Example</h3>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.<br><br>
-                Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.<br><br>
-                Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.<br><br>
-                Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.<br><br>
-                Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.<br><br>
-                Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.<br><br>
-                Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+            <br><br><br>
+            <h3 id="explication">Explication des scouts</h3>
+            <ul>
+                <li>D'où ça vient</li>
+                <p></p>
+                <li>Le fondateur</li>
+                <p></p>
+                <li>L'ASC</li>
+                <p></p>
+            </ul>
+
+            <h3 id="49">Le 49e groupe scout</h3>
+            <ul>
+                <li>Les différents groupes d'âges</li>
+                <p></p>
+                <li>Dates de création</li>
+                <p></p>
+                <li>Petit historique</li>
+                <p></p>
+                <li>Terre des scouts</li>
+                <p></p>
+            </ul>    
+
+            <h3 id="dates">Les dates importantes</h3>
+
+            <h3 id="financement">Les moyens de financements</h3>
+            <ul>
+                <li>Calendrier</li>
+                <p></p>
+                <li>Chocolat</li>
+                <p></p>
+                <li>Lave-O-Thon</li>
+                <p></p>
+                <li>Canette</li>
+                <p></p>
+                <li>Linge</li>
+                <p></p>
+                <li>Dons</li>
+                <p></p>
+            </ul>
+
+            <h3 id="photos">Section photos</h3>
+
+            <h3 id="implication">Comment s'impliquer?</h3>
+            <ul>
+                <li>Animateur</li>
+                <p></p>
+                <li>Membre du CA</li>
+                <p></p>
+                <li>Aide de camps ou d'activités</li>
+                <p></p>
+            </ul>
         </div>
     </body>
 </html>
