--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
             <div class="header">
-                <div><img class="logo" src="images/foulard.png" width="125" height="150"></div>
+                <div><img class="logo" src="images/foulard.png"></div>
             </div>
             <div class="header-bottom-text">
                 <p>Le 49e Groupe Scout!</p>
