line in sidenav

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="#" onclick="closeNav()">-Haut de page</a><br>
-                <a href="#explication" onclick="closeNav()">-Explication des scouts</a><br>
-                <a href="#49" onclick="closeNav()">-Le 49e groupe scout</a><br>
-                <a href="#dates" onclick="closeNav()">-Dates importantes</a><br>
-                <a href="#financement" onclick="closeNav()">-Moyens de financements</a><br>
-                <a href="#photos" onclick="closeNav()">-Photos</a><br>
-                <a href="#implication" onclick="closeNav()">-Comment s'impliquer?</a>
+                <a class="choicenav" href="#" onclick="closeNav()">-Haut de page</a><br>
+                <a class="choicenav" href="#explication" onclick="closeNav()">-Explication des scouts</a><br>
+                <a class="choicenav" href="#49" onclick="closeNav()">-Le 49e groupe scout</a><br>
+                <a class="choicenav" href="#dates" onclick="closeNav()">-Dates importantes</a><br>
+                <a class="choicenav" href="#financement" onclick="closeNav()">-Moyens de financements</a><br>
+                <a class="choicenav" href="#photos" onclick="closeNav()">-Photos</a><br>
+                <a class="choicenav" href="#implication" onclick="closeNav()">-Comment s'impliquer?</a>
             </div>
               <div id="overlay" onclick="closeNav()"></div>
               
