--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <div id="overlay" onclick="closeNav()"></div>
               
               <div id="main">
-                <div><span onclick="openNav()">&#9776; Navigation</span></div>
+                <div><span id="navbutton" onclick="openNav()">&#9776; Navigation</span></div>
               </div>
 
 
