Premier text avec tentative d'image

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <a class="choicenav" href="#" onclick="closeNav()">-Haut de page</a><br>
-                <a class="choicenav" href="#explication" onclick="closeNav()">-Explication des scouts</a><br>
+                <a class="choicenav" href="#histoire" onclick="closeNav()">-Histoire du scoutisme</a><br>
                 <a class="choicenav" href="#49" onclick="closeNav()">-Le 49e groupe scout</a><br>
                 <a class="choicenav" href="#dates" onclick="closeNav()">-Dates importantes</a><br>
                 <a class="choicenav" href="#financement" onclick="closeNav()">-Moyens de financements</a><br>
                 <a class="choicenav" href="#photos" onclick="closeNav()">-Photos</a><br>
                 <a class="choicenav" href="#implication" onclick="closeNav()">-Comment s'impliquer?</a>
+                <br><br><br>
             </div>
               <div id="overlay" onclick="closeNav()"></div>
               
@@ -36,56 +37,99 @@
 
         <div class="content">
             <br><br><br>
-            <h3 id="explication">Explication des scouts</h3>
-            <ul>
-                <li>D'où ça vient</li>
-                <p></p>
-                <li>Le fondateur</li>
-                <p></p>
-                <li>L'ASC</li>
-                <p></p>
-            </ul>
+            <h3 id="histoire" class ="title">Histoire du scoutisme</h3>
+            <div class ="text">
+                <h4>D'où ça vient</h4>
+                    <div class="text-with-image">
+                        <p><em>Le 1er août 1907, à huit heures du matin, le son d’une corne de koudou retentit dans le silence du matin sur l’île de Brownsea en Angleterre. 
+                            Lord Robert Stephenson Smyth Baden-Powell of Gilwell vient d’inaugurer le premier camp scout.
+                            <br><br>
+                            Aujourd’hui, il y a 40 millions de scouts à travers le monde. Comment tout cela a-t-il commencé?
+                            <br><br>
+                            En 1876, Baden-Powell décroche la seconde place à l’École militaire, ce qui l’amènera à se distinguer tout au long de sa carrière. 
+                            Différentes expériences, dont des missions d’espionnage et la tenue d’un siège à Mafeking durant la guerre des Boers amèneront B.-P. à 
+                            développer des méthodes basées sur le travail en petits groupes et la valorisation des meilleurs comportements. À son retour en Angleterre, 
+                            il adapte ses réflexions dans un ouvrage pour les jeunes garçons, «Scouting for Boys», qui donnera naissance au mouvement scout. Celui-ci devient 
+                            rapidement populaire, et le premier jamboree est tenu à Londre en 1920.</em><br>(Source: Mon carnet d’aventure, Portfolio de scout Aventurier)
+                        </p>
+                        <p>
+                            <img src="images/baden-powell.png" alt="Baden-Powell" class="img">
+                        </p>
+                    </div>    
+                <h4>L'ASC</h4>
+                    <p>
 
-            <h3 id="49">Le 49e groupe scout</h3>
-            <ul>
+                    </p>
+            </div>
+
+          <h3 id="49" class ="title">Le 49e groupe scout</h3>
+            <ul class ="text">
                 <li>Les différents groupes d'âges</li>
-                <p></p>
+                    <p>
+
+                    </p>
                 <li>Dates de création</li>
-                <p></p>
+                    <p>
+
+                    </p>
                 <li>Petit historique</li>
-                <p></p>
+                    <p>
+
+                    </p>
                 <li>Terre des scouts</li>
-                <p></p>
+                    <p>
+
+                    </p>
             </ul>    
 
-            <h3 id="dates">Les dates importantes</h3>
+            <h3 id="dates" class ="title">Les dates importantes</h3>
+            <p class ="text"></p>
 
-            <h3 id="financement">Les moyens de financements</h3>
-            <ul>
+            <h3 id="financement" class ="title">Les moyens de financements</h3>
+            <ul class ="text">
                 <li>Calendrier</li>
-                <p></p>
+                    <p>
+
+                    </p>
                 <li>Chocolat</li>
-                <p></p>
+                    <p>
+
+                    </p>
                 <li>Lave-O-Thon</li>
-                <p></p>
+                    <p>
+
+                    </p>
                 <li>Canette</li>
-                <p></p>
+                    <p>
+
+                    </p>
                 <li>Linge</li>
-                <p></p>
+                    <p>
+
+                    </p>
                 <li>Dons</li>
-                <p></p>
+                    <p>
+
+                    </p>
             </ul>
 
-            <h3 id="photos">Section photos</h3>
+            <h3 id="photos" class ="title">Section photos</h3>
+            <p class ="text"></p>
 
-            <h3 id="implication">Comment s'impliquer?</h3>
-            <ul>
+            <h3 id="implication" class ="title">Comment s'impliquer?</h3>
+            <ul class ="text">
                 <li>Animateur</li>
-                <p></p>
+                    <p>
+
+                    </p>
                 <li>Membre du CA</li>
-                <p></p>
+                    <p>
+
+                    </p>
                 <li>Aide de camps ou d'activités</li>
-                <p></p>
+                    <p>
+
+                    </p>
             </ul>
         </div>
     </body>
