test téléphone + 2em paragraphe

--- a/index.html
+++ b/index.html
@@ -38,28 +38,56 @@
         <div class="content">
             <br><br><br>
             <h3 id="histoire" class ="title">Histoire du scoutisme</h3>
+            <br><br>
             <div class ="text">
                 <h4>D'où ça vient</h4>
-                    <div class="text-with-image">
-                        <p><em>Le 1er août 1907, à huit heures du matin, le son d’une corne de koudou retentit dans le silence du matin sur l’île de Brownsea en Angleterre. 
-                            Lord Robert Stephenson Smyth Baden-Powell of Gilwell vient d’inaugurer le premier camp scout.
-                            <br><br>
-                            Aujourd’hui, il y a 40 millions de scouts à travers le monde. Comment tout cela a-t-il commencé?
-                            <br><br>
-                            En 1876, Baden-Powell décroche la seconde place à l’École militaire, ce qui l’amènera à se distinguer tout au long de sa carrière. 
-                            Différentes expériences, dont des missions d’espionnage et la tenue d’un siège à Mafeking durant la guerre des Boers amèneront B.-P. à 
-                            développer des méthodes basées sur le travail en petits groupes et la valorisation des meilleurs comportements. À son retour en Angleterre, 
-                            il adapte ses réflexions dans un ouvrage pour les jeunes garçons, «Scouting for Boys», qui donnera naissance au mouvement scout. Celui-ci devient 
-                            rapidement populaire, et le premier jamboree est tenu à Londre en 1920.</em><br>(Source: Mon carnet d’aventure, Portfolio de scout Aventurier)
+                    <div class="text-histoire">
+                        <p class="media-change">
+                            <em>
+                                Le 1er août 1907, à huit heures du matin, le son d’une corne de koudou retentit dans le silence du matin sur l’île de Brownsea en Angleterre. 
+                                Lord Robert Stephenson Smyth Baden-Powell of Gilwell vient d’inaugurer le premier camp scout.
+                                <br><br>
+                                Aujourd’hui, il y a 40 millions de scouts à travers le monde. Comment tout cela a-t-il commencé?
+                                <br><br>
+                                En 1876, Baden-Powell décroche la seconde place à l’École militaire, ce qui l’amènera à se distinguer tout au long de sa carrière. 
+                                Différentes expériences, dont des missions d’espionnage et la tenue d’un siège à Mafeking durant la guerre des Boers amèneront B.-P. à 
+                                développer des méthodes basées sur le travail en petits groupes et la valorisation des meilleurs comportements. À son retour en Angleterre, 
+                                il adapte ses réflexions dans un ouvrage pour les jeunes garçons, «Scouting for Boys», qui donnera naissance au mouvement scout. Celui-ci devient 
+                                rapidement populaire, et le premier jamboree est tenu à Londre en 1920.
+                            </em>
+                                <br>(Source: Mon carnet d’aventure, Portfolio de scout Aventurier)
                         </p>
                         <p>
-                            <img src="images/baden-powell.png" alt="Baden-Powell" class="img">
+                            <div class="container-image">
+                                <img src="images/baden-powell.png" alt="Baden-Powell" class="img">
+                                <div class="overlay-BP">Lord Robert Stephenson Smyth Baden-Powell of Gilwell</div>
+                            </div>
                         </p>
-                    </div>    
+                    </div><br><br><br><br>
                 <h4>L'ASC</h4>
-                    <p>
-
-                    </p>
+                    <div class="text-and-picture-ASC">
+                        <p>
+                            <div class="container-image">
+                                <img src="images/logo-ASC.png" alt="logo-ASC" class="img">
+                                <div class="overlay-ASC">Logo de l'ASC</div>
+                            </div>
+                        </p>
+                        <p class="text-ASC" class="media-change">
+                            <em>
+                                Au Canada, la première troupe canadienne-française fut créée en 1918 Ottawa, et de récentes découvertes nous permettent de croire que des 
+                                éclaireurs francophones auraient pu accueillir Baden-Powell lors de son passage à Québec à l’été 1910. Il faudra toutefois attendre un peu avant 
+                                que le scoutisme prenne réellement	son envol, puisque l’Église catholique, dont l’influence sur la société était à l’époque très marquée, hésita 
+                                dans un premier temps à encourager le mouvement. En 1926, le scoutisme obtint toutefois l’appui de l’Église et entreprit une croissance fulgurante.
+                                <br><br>
+                                Jusque-là strictement masculin, le scoutisme canadien fusionna avec le guidisme en 1980, donnant un nouvel élan à l’organisation. 11 000 membres de 
+                                plus se joindront à l’Association des scouts du Canada en 1994. Aujourd’hui, le scoutisme te permet de t’accomplir pleinement, en ciblant tes champs 
+                                d’intérêts et en t’amenant à en développer de nouveaux. Tu développeras ainsi des outils te permettant d’atteindre ton plein potentiel comme individu, 
+                                comme membre de ta communauté et comme citoyen y jouant un rôle actif.
+                            </em>
+                                <br>
+                                (Source: Mon carnet d’aventure, Portfolio de scout Aventurier)
+                        </p>
+                    </div>
             </div>
 
           <h3 id="49" class ="title">Le 49e groupe scout</h3>
