img repared+ navbutton close

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <div id="overlay" onclick="closeNav()"></div>
               
               <div id="main">
-                <div><span id="navbutton" onclick="openNav()">&#9776; Navigation</span></div>
+                <div><span id="navbutton" onclick="toggleNav()">&#9776; Navigation</span></div>
               </div>
 
 
